# MemScreen

./: .dockerignore  .gitignore  .gitignore.clean  ARCHITECTURE.md  ASSETS.md  AUTOMATED_BUILD_SUMMARY.md  BEAUTIFUL_KIVY.md  BUILD_SUMMARY.md  CHAT_FIXES.md  CHAT_MEMORY_TEST.md  DARK_THEME_UPDATE.md  DOWNLOAD_GUIDE.md  Dockerfile  FEATURE_COMPLETE.md  FINAL_SUCCESS_REPORT.md  GRAPH_MEMORY_GUIDE.md  INSTALL.md  KIVY_CLEAN.md  KIVY_RUNNING.md  KIVY_UI_GUIDE.md  KIVY_UI_READY.md  LICENSE  LOG  MERGE_CHAT_SEARCH.md  MODEL_PERFORMANCE.md  MemScreen.spec  OPTIMIZATION_REPORT.md  OPTIMIZATION_SUMMARY.md  PACKAGING.md  PHASE2_COMPLETE.md  PROCESS_MINING_GUIDE.md  PRODUCT_TEST_REPORT.md  PROJECT_COMPLETE.md  QUICKSTART.md  QUICK_OPTIMIZE.md  QUICK_START.py  README.md  REFACTORING_COMPLETE.md  REFACTORING_PLAN.md  RELEASE_GUIDE.md  (+71 more)
.github/: GITHUB_SOCIAL_PREVIEW_SETUP.md  social-preview.md
archive/: README.md
assets/: logo.icns
config/: config_example.yaml
docker/: docker-compose.vllm.yml  test_docker.sh
docs/: API_HTTP.md  ARCHITECTURE.md  AUDIO_RECORDING.md  AUDIO_UPDATE_SUMMARY.md  CHANGELOG.md  CHAT_OPTIMIZATION.md  CHINESE_PATH_GUIDE.md  CORE_API.md  CV2_FIX.md  DOCKER.md  DYNAMIC_MEMORY.md  FILE_LOADER_GUIDE.md  FLOATING_BALL.md  FLUTTER.md  FOLDER_UPLOAD_GUIDE.md  INSTALLATION.md  INTELLIGENT_AGENT.md  LOCAL_MODEL_OPTIMIZATION_SUMMARY.md  LOGO.md  LOGO_GUIDELINES.md  MACOS_BUILD_GUIDE.md  MACOS_PERMISSION_GUIDE.md  MEMORY_INTEGRATION.md  MIGRATION_GUIDE.md  MODEL_OPTIMIZATION.md  OPTIMIZATION_ROADMAP.md  PACKAGING.md  PRODUCTIZATION_SOLUTION.md  PROJECT_STRUCTURE.md  QUICK_START.md  QUICK_START_GUIDE.py  RECORDING_GUIDE.md  RELEASE_PACKAGING.md  STEP35FLASH.md  TESTING_GUIDE.md  TEST_RUN_SUMMARY.md  UBUNTU_INSTALLATION_GUIDE.md  UI_LOGIC_SEPARATION_ASSESSMENT.md  USER_GUIDE.md  VLLM_BACKEND.md  (+2 more)
examples/: demo_chat_integration.py  demo_dynamic_memory.py  demo_intelligent_agent.py  demo_optimization.py  demo_visual_agent.py  dynamic_memory_example.py
install/: install.bat  install.sh
macos/: BUILD.md  Info.plist  MODELS.md  MemScreen.rb  README.md  build_app.sh  build_simple.sh  install.sh  install_complete.sh
memscreen/: __init__.py  cache.py  chat_ui.py  chroma.py  cv2_loader.py  file_loader.py  file_processor.py  input_tracker.py  macos_permissions.py  memory.py  memscreen.py  ollama_runtime.py  process_mining.py  prompts.py  prompts_core.py  screenshot_ui.py  telemetry.py  test_memory.py  unified_ui.py  utils.py  version.py
memscreen.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
packaging/: UBUNTU_PACKAGE.md
pyinstaller/: memscreen_linux.spec  memscreen_macos.spec  (+1 more)
(+343 files in other folders)
